--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "tailwind": "npx tailwindcss -i ./public/input.css -o ./public/output.css --watch"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "tailwindcss": "^3.2.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.0"
   }
 }
